# Compocyte

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  NN_class_dev.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  toc.yml
classiFire/: hierarchical_classifier.py  node_memory.py
core/: __init__.py  hierarchical_classifier.py  hierarchy_container.py  neural_network.py  node_memory.py  optimization.py  scvi_mixin.py  sequencing_data_container.py  tools.py
core/base/: CPN_base.py  CPPN_base.py  benchmarking_base.py  data_base.py  export_import_base.py  hierarchy_base.py
core/models/: __init__.py  celltypist.py  dense.py  dense_base.py  local_classifiers.py  log_reg.py  logreg.py  neural_network.py  single_assignment.py
data/: test_hierarchy.pkl
docs/: api.md  conf.py  getting_started.md  index.rst  overview.md  readme.rst  requirements.txt  troubleshooting.rst
docs/api/: __init__.rst  modules.rst
docs/resources/: citation.rst  index.rst  troubleshooting.rst
docs/tutorials/: getting_started.rst  hierarchical_inference.rst  index.rst  modifying_classifiers.ipynb  quick_start.rst  training_PBMC_classifier.ipynb  training_classifiers.rst
manual_tests/: profiling.py  test_data.py
source/: README.md  api.rst  conf.py  index.rst
source/_templates/: class.rst  module.rst
source/_templates/autosummary/: module.rst
source/api/: Compocyte.core.base.data_base.rst  Compocyte.core.base.export_import_base.rst  Compocyte.core.base.hierarchy_base.rst  Compocyte.core.base.rst  Compocyte.core.hierarchical_classifier.rst  Compocyte.core.models.dense_torch.rst  Compocyte.core.models.dummy_classifier.rst  Compocyte.core.models.fit_methods.rst  Compocyte.core.models.log_reg.rst  Compocyte.core.models.rst  Compocyte.core.models.trees.rst  Compocyte.core.rst  Compocyte.core.tools.rst  Compocyte.core.tuner.rst  Compocyte.rst
source/tutorials/: example_dataset.rst  getting_started.rst  index.rst  inference.rst  training.rst
src/Compocyte/: __init__.py
src/Compocyte/core/: __init__.py  hierarchical_classifier.py  tools.py  tuner.py
src/Compocyte/core/base/: CPN_base.py  CPPN_base.py  LCPN_base.py  __init__.py  data_base.py  export_import_base.py  hierarchy_base.py
src/Compocyte/core/models/: __init__.py  auto_encoder.py  dense.py  dense_base.py  dense_torch.py  dummy_classifier.py  fit_methods.py  log_reg.py  trees.py
src/Compocyte/data/: __init__.py  _builtin.py
src/Compocyte/data/data/: test_data.h5ad  test_hierarchy.pkl
src/Compocyte/pretrained/: __init__.py  _builtin.py
src/scFlorist/: __init__.py
src/scFlorist/core/: __init__.py  hierarchical_classifier.py  tools.py
src/scFlorist/core/base/: CPN_base.py  CPPN_base.py  __init__.py  data_base.py  export_import_base.py  hierarchy_base.py
src/scFlorist/core/models/: __init__.py  auto_encoder.py  dense.py  dense_base.py  dense_torch.py  log_reg.py
tests/: generate_test_data.py  test_CI.py  test_hierarchical_classifier.py  test_monte_carlo.py  test_pretrained.py  test_test.py  test_training.py  test_training_io.py
