[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Compocyte"
version = "1.0.2.1"
authors = [
  { name="Thomas Walle", email="t.walle@dkfz-heidelberg.de" },
  { name="Christopher Beltz", email="christopher.beltz@dkfz-heidelberg.de" },
]
description = "Compocyte automates cell type annotation for scRNAseq data using a composite of hierarchically arranged classifiers."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "catboost==1.2.7",
  "balanced-loss@git+https://github.com/fcakyon/balanced-loss.git",
  "scanpy==1.9.3",
  "SEACells==0.3.3",
  "cytopus@git+https://github.com/wallet-maker/cytopus.git",
  "torch==2.0.1",
  "scikit-learn==1.2.2",
  "torch==2.5.0"
  ]

[options]
package_dir = "src"

[project.urls]
"Homepage" = "https://github.com/WALL-E-Lab/Compocyte"
"Bug Tracker" = "https://github.com/WALL-E-Lab/Compocyte/issues"

[tool.hatch.metadata]
allow-direct-references = true