[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Compocyte"
version = "1.0.2.1"
authors = [
  { name="Thomas Walle", email="t.walle@dkfz-heidelberg.de" },
  { name="Christopher Beltz", email="christopher.beltz@dkfz-heidelberg.de" },
]
description = "Compocyte automates cell type annotation for scRNAseq data using a composite of hierarchically arranged classifiers."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "catboost==1.2.10",
  "balanced-loss==0.1.1",  
  "anndata==0.12.11",  
  "scanpy==1.12.1",
  "SEACells==0.3.3",
  "cytopus==1.3.4",
  "scikit-learn==1.8.0",
  "torch==2.11.0",
  "pytest==9.0.3"
  ]

[options]
package_dir = "src"

[project.urls]
"Homepage" = "https://github.com/WALL-E-Lab/Compocyte"
"Bug Tracker" = "https://github.com/WALL-E-Lab/Compocyte/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.package-data]
"Compocyte.data" = ["data/*.h5ad", "data/*.pkl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"