# =============================================================================
# Versioning Guide for Contributors
# =============================================================================
# This project uses setuptools-scm for automatic versioning from git tags.
#
# To release a new version:
#   1. Ensure all changes are committed
#   2. Tag the release: git tag v1.2.3
#   3. Push the tag:  git push --tags
#
# Version format: vMAJOR.MINOR.PATCH (e.g., v1.0.2, v2.1.0-beta1)
# The version is written to src/Compocyte/_version.py during build.
# =============================================================================

[build-system]
requires = ["setuptools-scm>=8.0", "hatchling"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/Compocyte/_version.py"

[project]
name = "Compocyte"
dynamic = ["version"]
authors = [
  { name="Thomas Walle", email="t.walle@dkfz-heidelberg.de" },
  { name="Christopher Beltz", email="christopher.beltz@dkfz-heidelberg.de" },
]
description = "Compocyte automates cell type annotation for scRNAseq data using a composite of hierarchically arranged classifiers."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "catboost==1.2.10",
  "balanced-loss==0.1.1",  
  "anndata==0.12.11",  
  "scanpy==1.12.1",
  "SEACells==0.3.3",
  "cytopus==1.3.4",
  "scikit-learn==1.8.0",
  "torch==2.11.0",
  "pytest==9.0.3",
  "dask==2026.3.0",
  "pooch==1.9.0",
  "leidenalg==0.11.0"
  ]

[options]
package_dir = "src"

[project.urls]
"Homepage" = "https://github.com/WALL-E-Lab/Compocyte"
"Bug Tracker" = "https://github.com/WALL-E-Lab/Compocyte/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.01.29",
    "sphinx-design>=0.5.0",
    "nbsphinx>=0.9.0",
    "myst-parser>=2.0.0",
    "ipython>=8.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.package-data]
"Compocyte.data" = ["data/*.h5ad", "data/*.pkl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"